    * 0151 enterasys_cpu_util: Changed check to not longer summarize all modules...
            NOTE: Please refer to the migration notes!
    * 0802 ibm_svc_nodestats.iops, ibm_svc_systemstats.iops: new checks for IO operations/sec on IBM SVC / V7000 devices
    * 0602 cmciii.humidity: new check for Rittals CMC III humidity sensors
    * 0777 FIX: special agent emcvnx: did not work with security file authentication...
    * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
    * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
    * 0787 FIX: df: fixed problems on some filesystem checks when legacy check parameters where used...
    * 0803 FIX: agent_ibmsvc: raw data for System Info Check and License Check now in correct format...
    * 0788 FIX: oracle_tablespaces: now able to bear None values as warn/crit levels...
    * 0789 FIX: oracle_tablespaces: fixed bug when using dynamic filesystem levels...

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes