@@ -16,6 +16,7 @@
             NOTE: Please refer to the migration notes!
     * 0802 ibm_svc_nodestats.iops, ibm_svc_systemstats.iops: new checks for IO operations/sec on IBM SVC / V7000 devices
     * 0602 cmciii.humidity: new check for Rittals CMC III humidity sensors
+    * 0757 Linux multipath check can now use the alias instead of the UUID as item...
     * 0777 FIX: special agent emcvnx: did not work with security file authentication...
     * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
     * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
